--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
 		"kartik-v/yii2-editable": "*",
 		"kartik-v/yii2-datecontrol": "dev-master",
 		"2amigos/yii2-date-picker-widget": "~1.0",
-		"kartik-v/yii2-widget-datepicker": "@dev"
+		"kartik-v/yii2-widget-datepicker": "@dev",
+		"kartik-v/yii2-dialog": "*"
     },
 
     "require-dev": {
